--- a/force-app/main/default/classes/VDT_HttpService.cls
+++ b/force-app/main/default/classes/VDT_HttpService.cls
@@ -4,19 +4,18 @@ public inherited sharing class VDT_HttpService {
     public static String restGet(String endpoint, String sessionId) {
         try
         {
-            system.debug('endpoint :: ' + endpoint);
             Http http = new Http();
             HttpRequest request = new HttpRequest();
-            // request.setHeader('Authorization', 'Bearer ' + sessionId);
+            request.setHeader('Authorization', 'Bearer ' + sessionId);
             request.setTimeout(60000);
             request.setEndpoint(endPoint);
             request.setMethod(METHOD_GET);
             HttpResponse response = http.send(request);
             return response.getBody();
         }
-        catch(Exception ex)
-        {
-            system.debug('Exception in tooling API Call:'+ ex.getMessage());
+        catch(Exception ex) {
+            VDT_Log.get().add('Exception in tooling API Call:'+ ex.getMessage() + '\n' + ex.getStackTraceString(), VDT_LogSeverity.ERROR);
+            VDT_Log.get().publish();
             return ex.getMessage();
         }
     }
