show/hide column based on CMT configuration

--- a/force-app/main/default/classes/VDT_CustomMetadataService.cls
+++ b/force-app/main/default/classes/VDT_CustomMetadataService.cls
@@ -9,6 +9,26 @@ public inherited sharing class VDT_CustomMetadataService {
     @TestVisible
     private static Map<String, List<SObject>> customMetadataWithRecords = new Map<String, List<SObject>>();
 
+    public static Boolean isTerritoryManagementActive() {
+        Boolean isActive = false;
+        List<VDT_General_Setting__mdt> defaultSettings;
+        if (!customMetadataWithRecords.containsKey(VDT_GENERAL_SETTINGS)) {        
+            defaultSettings = [
+                SELECT  VDT_Is_Territory_Management_Active__c
+                FROM    VDT_General_Setting__mdt
+                WHERE   DeveloperName = :DEFAULT_APP_SETTINGS
+                WITH    SECURITY_ENFORCED
+            ];
+        } else {
+            defaultSettings = customMetadataWithRecords.get(VDT_GENERAL_SETTINGS);
+        }
+
+        if (!defaultSettings.isEmpty()) {
+            isActive = defaultSettings[0].VDT_Is_Territory_Management_Active__c;
+        }        
+        return isActive;
+    }
+
     public static List<VDT_KPI_Configuration__mdt> getActiveKpiConfigurations() {
         List<VDT_KPI_Configuration__mdt> configurations = new List<VDT_KPI_Configuration__mdt>();
         if (!customMetadataWithRecords.containsKey(VDT_KPI_CONFIGURATIONS)) {        
