--- a/force-app/main/default/classes/VDT_MasterDataAnalysisController.cls
+++ b/force-app/main/default/classes/VDT_MasterDataAnalysisController.cls
@@ -61,4 +61,15 @@ public inherited sharing class VDT_MasterDataAnalysisController {
             throw new AuraHandledException(e.getMessage());
         }
     }
+
+    @AuraEnabled(cacheable=true)
+    public static Boolean isTerritoryManagementActive(){
+        try {
+            return VDT_CustomMetadataService.isTerritoryManagementActive();
+        } catch (Exception e) {
+            VDT_Log.get().add(e.getMessage() + '\n' + e.getStackTraceString(), VDT_LogSeverity.ERROR);
+            VDT_Log.get().publish();
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
 }
