--- a/force-app/main/default/classes/VDT_MasterAnalysisCalculationBatch.cls
+++ b/force-app/main/default/classes/VDT_MasterAnalysisCalculationBatch.cls
@@ -34,7 +34,7 @@ public with sharing class VDT_MasterAnalysisCalculationBatch implements Database
                 countryClause = 'AND (' + String.join(countryCriterias, ' OR ') + ')';
             }
             String query = String.format(
-                'SELECT Id, RecordType.Name, {0}, {1}, {2}, {4}, {5} FROM Account WHERE {0} != NULL AND {1} != NULL {6} AND VDT_Is_Test_Data__c = TRUE', 
+                'SELECT Id, RecordType.Name, {0}, {1}, {2}, {3}, {4}, {5} FROM Account WHERE {0} != NULL AND {1} != NULL {6} AND VDT_Is_Test_Data__c = TRUE', 
                 new List<String> {
                     countryField,
                     specialtyField,
@@ -100,7 +100,7 @@ public with sharing class VDT_MasterAnalysisCalculationBatch implements Database
                     this.dataCalculationRecord.Id
                 );
             }
-            // VDT_EmailService.sendMasterAnalysisCalculationFinishedEmailNotification(this.dataCalculationRecord.VDT_Country__c);
+            VDT_EmailService.sendMasterAnalysisCalculationFinishedEmailNotification(this.dataCalculationRecord.VDT_Country__c);
         } catch (Exception e) {
             VDT_Log.get().add(e.getMessage() + '\n' + e.getStackTraceString(), VDT_LogSeverity.ERROR);
             VDT_Log.get().publish();
