--- a/force-app/main/default/classes/VDT_RecordTypeService.cls
+++ b/force-app/main/default/classes/VDT_RecordTypeService.cls
@@ -4,4 +4,8 @@ public inherited sharing class VDT_RecordTypeService {
         return new VDT_RecordTypeSelector().getRecordTypeByObjectAndName(sobjectName, developerName);
     }
 
+    public static List<RecordType> getAllRecordTypesByObject(String sobjectName) {
+        return new VDT_RecordTypeSelector().getAllRecordTypesByObject(sobjectName);
+    }
+
 }
