--- a/force-app/main/default/classes/VDT_DataCalculationSelector.cls
+++ b/force-app/main/default/classes/VDT_DataCalculationSelector.cls
@@ -165,6 +165,7 @@ public inherited sharing class VDT_DataCalculationSelector {
             VDT_Data_Calculation__c.VDT_Job_Start_Date__c.getDescribe().getName(),
             VDT_Data_Calculation__c.VDT_Job_End_Date__c.getDescribe().getName(),
             VDT_Data_Calculation__c.VDT_Country__c.getDescribe().getName(),
+            VDT_Data_Calculation__c.RecordTypeId.getDescribe().getName(),
             'CreatedBy.Name'
         };
         String completedStatus = VDT_DataCalculationService.STATUS_COMPLETED;
