--- a/force-app/main/default/classes/VDT_RecordTypeSelector.cls
+++ b/force-app/main/default/classes/VDT_RecordTypeSelector.cls
@@ -48,4 +48,21 @@ public inherited sharing class VDT_RecordTypeSelector {
         );
         return Database.query(query);
     }
+
+    public List<RecordType> getAllRecordTypesByObject(String sobjectName) {
+        String whereString = 'SObjectType = :sobjectName';
+        String query = String.format(
+            'SELECT {0} FROM {1} ' + 
+            'WHERE {2} '+
+            'WITH SECURITY_ENFORCED ' +
+            '{3}', 
+            new List<String>{
+                getFieldListString(),
+                getObjectName(),
+                whereString,
+                getLimitString()
+            }
+        );
+        return Database.query(query);
+    }
 }
